--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "npm run clean && node build/build.js"
   },
   "dependencies": {
+    "hzqing-vue-timeline": "^1.0.3",
     "mavon-editor": "^2.6.15",
     "popper.js": "^1.14.4",
     "qs": "^6.5.2",
