--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "build": "npm run clean && node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.13.2",
+    "jszip": "^3.5.0",
+    "jszip-utils": "^0.1.0",
     "mavon-editor": "^2.6.15",
     "popper.js": "^1.14.4",
     "qs": "^6.5.2",
+    "spark-md5": "^3.0.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
