--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "qs": "^6.9.4",
     "spark-md5": "^3.0.1",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.7.4",
     "vue-popperjs": "^2.3.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
