--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue": "^2.5.2",
     "vue-cookies": "^1.7.4",
     "vue-popperjs": "^2.3.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "less": "^3.0.4",
